[WGSL] shader,execution,expression,call,builtin,reverseBits:* is failing https://bugs.webkit.org/show_bug.cgi?id=267345 rdar://120784629

Reviewed by Mike Wyrzykowski.

Fix a couple issues in the bit shifting logic of the constant function.
- The mask to check if a bit is set was missing a bit shift and just using (31 - k)
- The result of checking if the bit is set needs to be converted into 0|1, we
  were using the actual set bit instead.

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::UNARY_OPERATION):

Canonical link: https://commits.webkit.org/272904@main